Попровил всем кодировки

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ td{
 <div style="border:solid 1px #ccc; border-radius:10px; width:70%; min-width:1180px; background:rgba(255,255,255,0.7); margin: 0 auto; margin-top:50px; padding: 20 0 0 0">
 <table width=100%>
 <tr>
-<td align="center"><a href="saltuk/hobby.php"><img class=logo src="logos/saltuk.PNG"></a><br><br>
+<td align="center"><a href="saltuk.php"><img class=logo src="logos/saltuk.PNG"></a><br><br>
 <a href="saltuk.php">Салтук Константин</a></td>
 <td align="center"><a href="mahina/hobby.php"><img class=logo src="logos/mahina.jpg"></a><br><br>
 <a href="mahina/hobby.php">Махина Екатерина</a></td>
