--- a/chernova/fenechki.html
+++ b/chernova/fenechki.html
@@ -1,6 +1,6 @@
-<html>
+О╩©<html>
 	<head>
-		<title>Фенечки прямым плетением</title>
+		<title>п╓п╣п╫п╣я┤п╨п╦ п©я─я▐п╪я▀п╪ п©п╩п╣я┌п╣п╫п╦п╣п╪</title>
 	</head>
 	<body>
 		<body background="stripes.jpg">
@@ -8,15 +8,15 @@
 			<tr>
 				<td>
 					<img src="stanok.JPG" width="800" align="left">
-					<b><u><font size="+3"><font color="660099">Плетение фенечек на станке.</font></font></u></b><br><br>
-					<b><font size="+2"><font color="660099">Фенечки прямым плетением плетутся на специальном станке, на противоположных сторонах которого есть прорези для ниток. Правильно закрепив их на станке, можно создать натяжение нитей, которое способствует более удобному плетению браслета. Если у вас нет станка, не расстраивайтесь - многие делают его из коробки из-под сока. На самом деле, можно обойтись и без всего этого, просто закрепив нитки на рабочем месте.<br>
-								Подробная инструкция плетения изделий на станке представлена справа. Кстати, на станке можно плести не только браслеты, но и кошелечки, чехлы для телефонов, сумочки, закладки и многое другое.</font></font></b><br>
+					<b><u><font size="+3"><font color="660099">п÷п╩п╣я┌п╣п╫п╦п╣ я└п╣п╫п╣я┤п╣п╨ п╫п╟ я│я┌п╟п╫п╨п╣.</font></font></u></b><br><br>
+					<b><font size="+2"><font color="660099">п╓п╣п╫п╣я┤п╨п╦ п©я─я▐п╪я▀п╪ п©п╩п╣я┌п╣п╫п╦п╣п╪ п©п╩п╣я┌я┐я┌я│я▐ п╫п╟ я│п©п╣я├п╦п╟п╩я▄п╫п╬п╪ я│я┌п╟п╫п╨п╣, п╫п╟ п©я─п╬я┌п╦п╡п╬п©п╬п╩п╬п╤п╫я▀я┘ я│я┌п╬я─п╬п╫п╟я┘ п╨п╬я┌п╬я─п╬пЁп╬ п╣я│я┌я▄ п©я─п╬я─п╣п╥п╦ п╢п╩я▐ п╫п╦я┌п╬п╨. п÷я─п╟п╡п╦п╩я▄п╫п╬ п╥п╟п╨я─п╣п©п╦п╡ п╦я┘ п╫п╟ я│я┌п╟п╫п╨п╣, п╪п╬п╤п╫п╬ я│п╬п╥п╢п╟я┌я▄ п╫п╟я┌я▐п╤п╣п╫п╦п╣ п╫п╦я┌п╣п╧, п╨п╬я┌п╬я─п╬п╣ я│п©п╬я│п╬п╠я│я┌п╡я┐п╣я┌ п╠п╬п╩п╣п╣ я┐п╢п╬п╠п╫п╬п╪я┐ п©п╩п╣я┌п╣п╫п╦я▌ п╠я─п╟я│п╩п╣я┌п╟. п∙я│п╩п╦ я┐ п╡п╟я│ п╫п╣я┌ я│я┌п╟п╫п╨п╟, п╫п╣ я─п╟я│я│я┌я─п╟п╦п╡п╟п╧я┌п╣я│я▄ - п╪п╫п╬пЁп╦п╣ п╢п╣п╩п╟я▌я┌ п╣пЁп╬ п╦п╥ п╨п╬я─п╬п╠п╨п╦ п╦п╥-п©п╬п╢ я│п╬п╨п╟. п²п╟ я│п╟п╪п╬п╪ п╢п╣п╩п╣, п╪п╬п╤п╫п╬ п╬п╠п╬п╧я┌п╦я│я▄ п╦ п╠п╣п╥ п╡я│п╣пЁп╬ я█я┌п╬пЁп╬, п©я─п╬я│я┌п╬ п╥п╟п╨я─п╣п©п╦п╡ п╫п╦я┌п╨п╦ п╫п╟ я─п╟п╠п╬я┤п╣п╪ п╪п╣я│я┌п╣.<br>
+								п÷п╬п╢я─п╬п╠п╫п╟я▐ п╦п╫я│я┌я─я┐п╨я├п╦я▐ п©п╩п╣я┌п╣п╫п╦я▐ п╦п╥п╢п╣п╩п╦п╧ п╫п╟ я│я┌п╟п╫п╨п╣ п©я─п╣п╢я│я┌п╟п╡п╩п╣п╫п╟ я│п©я─п╟п╡п╟. п я│я┌п╟я┌п╦, п╫п╟ я│я┌п╟п╫п╨п╣ п╪п╬п╤п╫п╬ п©п╩п╣я│я┌п╦ п╫п╣ я┌п╬п╩я▄п╨п╬ п╠я─п╟я│п╩п╣я┌я▀, п╫п╬ п╦ п╨п╬я┬п╣п╩п╣я┤п╨п╦, я┤п╣я┘п╩я▀ п╢п╩я▐ я┌п╣п╩п╣я└п╬п╫п╬п╡, я│я┐п╪п╬я┤п╨п╦, п╥п╟п╨п╩п╟п╢п╨п╦ п╦ п╪п╫п╬пЁп╬п╣ п╢я─я┐пЁп╬п╣.</font></font></b><br>
 
 		</td></tr>
 		<tr><td>
 				<br>
 				<br>
-				<b><font size="+2"><font color="660099">Вот несколько идей для фенечек;)</font></font></b><br>
+				<b><font size="+2"><font color="660099">п▓п╬я┌ п╫п╣я│п╨п╬п╩я▄п╨п╬ п╦п╢п╣п╧ п╢п╩я▐ я└п╣п╫п╣я┤п╣п╨;)</font></font></b><br>
 					<img src="x_0b521cf1.jpg">
 					<img src="80397670_large_ddde04106d.jpg">
 					<img src="61333143_1278665101_Simons_Cat_2_.jpg">
@@ -31,7 +31,7 @@
 					<img src="x_585c6d3f.jpg">
 					<img src="d3OoOWyFpUs.jpg">
 					<img src="x_69a828f1.jpg"><br>
-					<p align="right"><b><font size="+2"><a href="hobby.html">Назад</a></font></b></p>	
+					<p align="right"><b><font size="+2"><a href="hobby.html">п²п╟п╥п╟п╢</a></font></b></p>	
 		</td></tr></table></p>
 	</body>
 </html>
