--- a/chernova/hobby.html
+++ b/chernova/hobby.html
@@ -1,6 +1,6 @@
-<html>
+﻿<html>
 	<head>
-		<title>вЙУЕТПРМЕФЕОЙЕ - РТПУФП Й ЛТБУЙЧП!;)</title>
+		<title>Бисероплетение - просто и красиво!;)</title>
 		<meta >
 		<style>
 			   h1 {
@@ -21,35 +21,35 @@
 			</tr>
 			<tr>
 				<td bgcolor="FFCCFF" colspan="2"><div align="justify">
-						<font color="#660099"> <font size="+3"> <center><b> юФП ФБЛПЕ ВЙУЕТ? "нБМЕОШЛЙЕ ВХУЙОЛЙ, ЫБТЙЛЙ У ПФЧЕТУФЙЕН" - ЙНЕООП ФБЛ ПФЧЕФЙФ ВПМШЫЙОУФЧП МАДЕК. оБ УБНП ДЕМЕ, ВЙУЕТ - ЬФП ГЕМЩК НЙТ! йЪ ВЙУЕТБ НПЦОП УРМЕУФЙ ОЕ ФПМШЛП ТБЪМЙЮОЩЕ ХЛТБЫЕОЙС, ОП Й ЦЙЧПФОЩИ, ГЧЕФЩ, ДЕТЕЧШС - ЧУЕ, ОБ ЮФП Х ЧБУ ИЧБФЙФ ЖБОФБЪЙЙ!<br>
-										оБ ЬФПН УБКФЕ С РПРЩФБАУШ ОБХЮЙФШ РМЕУФЙ ОЕУМПЦОЩЕ ВТБУМЕФЙЛЙ ОПЧЙЮЛПЧ, Б ФЕ, ЛФП ХЦЕ ИПТПЫП ЪОБЛПН У ВЙУЕТПРМЕФЕОЙЕН, УНПЗХФ ОБКФЙ ЪДЕУШ ЙОФЕТЕУОЩЕ УИЕНЩ РМЕФЕОЙС ЖЕОЕЮЕЛ Й ЦЙЧПФОЩИ.</b></center></font></font>
+						<font color="#660099"> <font size="+3"> <center><b> Что такое бисер? "Маленькие бусинки, шарики с отверстием" - именно так ответит большинство людей. На само деле, бисер - это целый мир! Из бисера можно сплести не только различные украшения, но и животных, цветы, деревья - все, на что у вас хватит фантазии!<br>
+										На этом сайте я попытаюсь научить плести несложные браслетики новичков, а те, кто уже хорошо знаком с бисероплетением, смогут найти здесь интересные схемы плетения фенечек и животных.</b></center></font></font>
 			</div></td></tr>
 			<tr>
 				<td width="1100">
 					<br>
-					<font size="+2">рТЕЦДЕ, ЮЕН РТЙУФХРЙФШ Л ТБВПФЕ, ДБЧБК РПУНПФТЙН, ЧУЕ МЙ Х ОБУ ЕУФШ?
+					<font size="+2">Прежде, чем приступить к работе, давай посмотрим, все ли у нас есть?
 					<ul>
-						<li>вЙУЕТ ТБЪМЙЮОЩИ ГЧЕФПЧ (ОБ ФЧПК ЧЛХУ)</li>
-						<li>мЕУЛБ/ОЙФЛБ (ЛПНХ ОБ ЮЕН ХДПВОЕЕ РМЕУФЙ, ДМС РМЕФЕОЙС ФБЛЙИ ВТБУМЕФПЧ С ЙУРПМШЪПЧБМБ МЕУЛХ, Ф.Л. ПОБ ЛТЕРЮЕ)</li>
-						<li>оПЦОЙГЩ</li>
-						<li>2 ЙЗПМЛЙ (ОЕ ПВСЪБФЕМШОП, РТПУФП У ОЙНЙ ХДПВОЕЕ РМЕУФЙ ВТБУМЕФЩ)</li>
+						<li>Бисер различных цветов (на твой вкус)</li>
+						<li>Леска/нитка (кому на чем удобнее плести, для плетения таких браслетов я использовала леску, т.к. она крепче)</li>
+						<li>Ножницы</li>
+						<li>2 иголки (не обязательно, просто с ними удобнее плести браслеты)</li>
 				   	</ul></font>
-					<h1><center><font size="+3"><u><b>вТБУМЕФ 1</b></u></font></center></h1>
+					<h1><center><font size="+3"><u><b>Браслет 1</b></u></font></center></h1>
 					<img src="3.jpg" align="left">
-					<p align="justify"><font size="+2">оБЮОЕН У УБНПЗП РТПУФПЗП ЧЙДБ ВТБУМЕФПЧ. х ЬФПК ГЕРПЮЛЙ УХЭЕУФЧХЕФ НОПЦЕУФП ЧБТЙБГЙК - ЧУЕ ЪБЧЙУЙФ ПФ ЛПМЙЮЕУФЧБ ВХУЙО, ЛПФПТЩЕ НЩ ВХДЕН ОБОЙЪЩЧБФШ ОБ ОЙФЛХ. ъДЕУШ НЩ ТБУУНПФТЙН РТЙНЕТ У ПДОПК ВХУЙОПК (б). йФБЛ, РПЕИБМЙ!<br>
-						<u>ыБЗ 1.</u> пФТЕЪБМЙ ЛХУПЛ МЕУЛЙ/ОЙФЛЙ ДМЙОПК РТЙНЕТОП 1,5 Н (ДМС РЕТЧПЗП ТБЪБ МХЮЫЕ ПФТЕЪБФШ У ЪБРБУПН). дМС ФЕИ, ЛФП ТБВПФБЕФ У ЙЗПМЛБНЙ: ЧДЕМЙ Ч ПВБ ЛПОГБ ОЙФЛЙ ЙЗПМЛЙ.<br>
-						<u>ыБЗ 2.</u> оБОЙЪБМЙ 3 ВХУЙОЩ ОБ ОЙФЛХ. ъБФЕН ОБ ПДЙО ЛПОЕГ ОЙФЙ ОБДЕМЙ ЕЭЕ 1 ВХУЙОХ Й РТПУХОХМЙ ЮЕТЕЪ ОЕЕ ДТХЗПК ЛПОЕГ ОЙФЙ (РТЙЮЕН, ЛПОГЩ ОЙФЙ ДПМЦОЩ ЙДФЙ ЮЕТЕЪ ВХУЙОХ ОБЧУФТЕЮХ ДТХЗ ДТХЗХ, ОЕ РБТБММЕМШОП!).<br>
-						<u>ыБЗ 3.</u> оБ ЛБЦДЩК ЛПОЕГ ОЙФЙ ОБОЙЪБМЙ РП 1 ВХУЙОЕ. ъБФЕН ОБ ПДЙО ЛПОЕГ ОЙФЙ ОБДЕМЙ ЕЭЕ 1 ВХУЙОЛХ Й РТПУХОХМЙ ЮЕТЕЪ ОЕЕ ДТХЗПК ЛПОЕГ ОЙФЙ (ОБЛТЕУФ, ОЕ РБТБММЕМШОП).<br>
-						<u>ыБЗ 4.</u> дБМЕЕ РПЧФПТСКФЕ "ЫБЗ 3", РПЛБ ЧБЫ ВТБУМЕФ ОЕ ДПУФЙЗОЕФ ОХЦОПК ДМЙОЩ. ч ЛПОГЕ ЧЩ НПЦЕФЕ МЙВП РТПДЕФШ ОЙФЙ ЮЕТЕЪ УБНХА РЕТЧХА ВХУЙОХ Й ЪБЧСЪБФШ ХЪЕМПЛ, МЙВП УДЕМБФШ ЪБЧСЪЛЙ ЙМЙ ЪБУФЕЦЛХ.
+					<p align="justify"><font size="+2">Начнем с самого простого вида браслетов. У этой цепочки существует множесто вариаций - все зависит от количества бусин, которые мы будем нанизывать на нитку. Здесь мы рассмотрим пример с одной бусиной (А). Итак, поехали!<br>
+						<u>Шаг 1.</u> Отрезали кусок лески/нитки длиной примерно 1,5 м (для первого раза лучше отрезать с запасом). Для тех, кто работает с иголками: вдели в оба конца нитки иголки.<br>
+						<u>Шаг 2.</u> Нанизали 3 бусины на нитку. Затем на один конец нити надели еще 1 бусину и просунули через нее другой конец нити (причем, концы нити должны идти через бусину навстречу друг другу, не параллельно!).<br>
+						<u>Шаг 3.</u> На каждый конец нити нанизали по 1 бусине. Затем на один конец нити надели еще 1 бусинку и просунули через нее другой конец нити (накрест, не параллельно).<br>
+						<u>Шаг 4.</u> Далее повторяйте "шаг 3", пока ваш браслет не достигнет нужной длины. В конце вы можете либо продеть нити через самую первую бусину и завязать узелок, либо сделать завязки или застежку.
 					</font></p><br>
 					<br>
-					<h1><center><font size="+3"><u><b>вТБУМЕФ 2</b></u></font></center></h1>
-					<p align="justify"><font size="+2">ьФПФ ВТБУМЕФ РП УРПУПВХ РМЕФЕОЙС РПИПЦ ОБ РТЕДЩДХЭЙК, ФПМШЛП РМЕФЕФУС ПО ОБ ПДОПН ЛПОГЕ ОЙФЛЙ. оБЮОЕН!<br>
-						<u>ыБЗ 1.</u> пФТЕЪБМЙ ЛХУПЛ МЕУЛЙ/ОЙФЛЙ ДМЙОПК РТЙНЕТОП 1,5 Н (ДМС РЕТЧПЗП ТБЪБ МХЮЫЕ ПФТЕЪБФШ У ЪБРБУПН). дМС ФЕИ, ЛФП ТБВПФБЕФ У ЙЗПМЛБНЙ: ЧДЕЧБЕН Ч ПДЙО ЛПОЕГ ОЙФЛЙ ЙЗПМЛХ. дМС ХДПВУФЧБ ЧФПТПК ЛПОЕГ НПЦОП ЪБЛТЕРЙФШ.<br>
-						<u>ыБЗ 2.</u> оБОЙЪБМЙ 10 ВХУЙО ОБ ОЙФЛХ. ъБФЕН РТПУХОХМЙ ОЙФЛХ ЮЕТЕЪ УБНХА РЕТЧХА ВХУЙОХ ФБЛ, ЮФПВЩ ПВБ ЛПОГБ ОЙФЛЙ УНПФТЕМЙ Ч ПДОХ УФПТПОХ (УНПФТЙ ЛБТФЙОЛХ).<br>
+					<h1><center><font size="+3"><u><b>Браслет 2</b></u></font></center></h1>
+					<p align="justify"><font size="+2">Этот браслет по способу плетения похож на предыдущий, только плетется он на одном конце нитки. Начнем!<br>
+						<u>Шаг 1.</u> Отрезали кусок лески/нитки длиной примерно 1,5 м (для первого раза лучше отрезать с запасом). Для тех, кто работает с иголками: вдеваем в один конец нитки иголку. Для удобства второй конец можно закрепить.<br>
+						<u>Шаг 2.</u> Нанизали 10 бусин на нитку. Затем просунули нитку через самую первую бусину так, чтобы оба конца нитки смотрели в одну сторону (смотри картинку).<br>
 						 <img src="thumbs_aztec_schema.jpg" width="495" align="left">
-						<u>ыБЗ 3.</u> оБОЙЪБМЙ ЕЭЕ 5 ВХУЙО. ъБФЕН РТПУХОХМЙ ОЙФЛХ ЮЕТЕЪ 9-А ВХУЙОХ У ЛПОГБ ФБЛ (ОБ ЛБТФЙОЛЕ ОБТЙУПЧБОП РПОСФОЕЕ)<br>
-						<u>ыБЗ 4.</u> дБМЕЕ РПЧФПТСКФЕ "ЫБЗ 3", РПЛБ ЧБЫ ВТБУМЕФ ОЕ ДПУФЙЗОЕФ ОХЦОПК ДМЙОЩ. ч ЛПОГЕ ЧЩ НПЦЕФЕ МЙВП РТПДЕФШ ОЙФШ ЮЕТЕЪ УБНПЕ РЕТЧПЕ ЪЧЕОП Й ЪБЧСЪБФШ ХЪЕМПЛ, МЙВП УДЕМБФШ ЪБЧСЪЛЙ ЙМЙ ЪБУФЕЦЛХ.
+						<u>Шаг 3.</u> Нанизали еще 5 бусин. Затем просунули нитку через 9-ю бусину с конца так (на картинке нарисовано понятнее)<br>
+						<u>Шаг 4.</u> Далее повторяйте "шаг 3", пока ваш браслет не достигнет нужной длины. В конце вы можете либо продеть нить через самое первое звено и завязать узелок, либо сделать завязки или застежку.
 					</font></p><br>
 
 
