--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@ td{
 <a href="dserov.php">Серов Дмитрий</a></td>
 <td align="center"><a href="semushenko.php"><img class=logo src="logos/semushenko.jpg"></a><br><br>
 <a href="semushenko.php">Семушенко Алёна</a></td>
-<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<td align="center"><a href="binder.php"><img class=logo src="logos/binder.jpg"></a><br><br>
+<a href="binder.php">Биндер Сергей</a></td>
 </tr>
 </table>
 </div>
